[package]
name = "alanthinker_dynamic_get_field_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
alanthinker_dynamic_get_field_trait = {path="D:/Projects/My_git_projects/git_projects/RustLang/alanthinker_dynamic_get_field_trait"}
proc-macro2 = "*"
quote = "*"
inventory = "*"
syn = { version = "*", features = ["full", "derive"] }
