[package]
name = "alanthinker_dynamic_get_field_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[workspace.dependencies] 
alanthinker_dynamic_get_field_trait = { git = "https://github.com/alanthinker/alanthinker_dynamic_get_field_trait.git"  }

[dependencies]
alanthinker_dynamic_get_field_trait = {workspace = true}
proc-macro2 = "*"
quote = "*"
inventory = "*"
syn = { version = "*", features = ["full", "derive"] }

 

[workspace]
members = ["examples/test_dynamic"]